--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         >
 
 
+
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -26,12 +27,23 @@
                 android:layout_height="120dp"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
+
+                <androidx.appcompat.widget.Toolbar
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:layout_gravity="bottom">
+
+                </androidx.appcompat.widget.Toolbar>
+
                 <com.google.android.material.tabs.TabLayout
                     android:layout_width="match_parent"
                     android:layout_height="?attr/actionBarSize"
                     android:id="@+id/tabBar"
                     android:layout_gravity="bottom"
-                    app:layout_collapseMode="pin"/>
+                    app:layout_collapseMode="pin"
+                    android:background="@color/colorAccent"
+                    />
+
 
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
@@ -43,16 +55,18 @@
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:fillViewport="true">
+
 
             <androidx.viewpager.widget.ViewPager
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/viewPager"/>
+                android:id="@+id/viewPager">
+
+            </androidx.viewpager.widget.ViewPager>
 
         </androidx.core.widget.NestedScrollView>
-
-
 
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
