trying to add animations done only with a few need lot of refinning
Happy coding bro :)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,11 @@
         app:headerLayout="@layout/navigation_header"
         android:background="@drawable/navigation_drawer_background"
         android:id="@+id/naviagtionView"
-        />
+        >
+
+
+
+    </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
 
