--- a/app/src/main/res/anim/alert_dilog_entry.xml
+++ b/app/src/main/res/anim/alert_dilog_entry.xml
@@ -1,9 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fromAlpha="0"
-    android:toAlpha="1.0"
-    android:interpolator = "@android:anim/linear_interpolator"
-    android:duration = "1000">
+<set
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-</alpha>
+    <scale
+        android:pivotY="50%"
+        android:pivotX="50%"
+        android:fromYScale="0.50"
+        android:fromXScale="0.50"
+        android:toXScale="1"
+        android:toYScale="1"
+        android:duration = "250"
+        android:interpolator = "@android:anim/linear_interpolator"/>
+
+
+</set>
